# ClientServer

./: .gitignore  .gitmodules  CMakeLists.txt  client.cpp  client.h  person.cpp  person.h  request.cpp  request.h  response.cpp  response.h  server.cpp  server.h
common/: pub.h  types.h
common/crypto/: crypto.cpp  crypto.h
common/socket/: all.hpp  connector.cpp  connector.h  logger.cpp  logger.h  socket.cpp  socket.h
server/: handler.cpp  handler.h
shared/: pub.cpp  shared.cpp  shared.h
shared/crypto/: crypto.h
shared/socket/: connector.cpp  connector.h  logger.h  socket.cpp  socket.h
